@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.412 2005/10/09 18:51:06 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.413 2005/10/09 20:27:41 agaffney Exp $
 
 *GLI-0.3 (5 Oct 2005)
 
@@ -18,6 +18,7 @@
   src/net/server/handlers/ProfileHandler.py, src/net/server/handler.py:
   split out profile URLs into separate handler function
   move handlers into subdirectory
+  add Welcome and Clients handlers
 
 *GLI-0.2 (5 Oct 2005)
 
